<resources>
    <string name="app_name">StarXpandSDK</string>

    <string name="discoveryButton">Discovery</string>
    <string name="printingButton">Printing</string>
    <string name="monitorButton">Monitor</string>
    <string name="statusButton">Status</string>
    <string name="printingSpoolerButton">Printing -Spooler-</string>
    <string name="templatePrintButton">Template Print</string>
    <string name="firmwareUpdateButton">Firmware Update</string>


    <string name="interfaceTextView">Interface</string>
    <string name="lanCheckBox">LAN</string>
    <string name="bluetoothCheckBox">Bluetooth</string>
    <string name="usbCheckBox">USB</string>
    <string name="empty"> </string>

    <string name="identifier">Identifier</string>
    <string name="interfaceType">Interface</string>
    <string name="defaultMacAddress">00:11:62:00:00:00</string>
    <string name="print">Print</string>
    <string name="monitor">Start Monitoring</string>
    <string name="status">Get Status</string>
    <string name="spoolPrint">Spool Print</string>

    <string name="hintJobId">jobID</string>
    <string name="getJobStatus">Get Job Status</string>

    <string name="template">Template</string>
    <string name="fieldData">Field Data</string>

    <string name="checkVersions">Check Versions</string>
    <string name="update">Update</string>
    <string name="firmware_update_warning_writing">Caution : The firmware is being updated. Until the result is displayed, please leave the printer turned on and wait without operating the screen of this device.\n\n</string>
    <string name="firmware_update_warning_Updating">\nFirmware data transmission has been completed. The firmware is being updated.　This process may take several minutes.\n\n</string>

    <string-array name="list">
        <item>LAN</item>
        <item>Bluetooth</item>
        <item>USB</item>
    </string-array>

    <string-array name="listTemplate">
        <item>Receipt w/ specifying number of characters</item>
        <item>Receipt w/o specifying number of characters</item>
        <item>Label</item>
    </string-array>

    <string-array name="listReceiptWithSpecifyingNumberOfCharactersFieldData">
        <item>Receipt1</item>
        <item>Receipt2</item>
    </string-array>

    <string-array name="listReceiptWithoutSpecifyingNumberOfCharactersFieldData">
        <item>Receipt1</item>
        <item>Receipt3</item>
    </string-array>

    <string-array name="listLabelFieldData">
        <item>Label1</item>
        <item>Label2</item>
    </string-array>
</resources>
