<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id = "@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/discoveryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/discoveryButton" />

    <Button
        android:id="@+id/printButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/printingButton" />

    <Button
        android:id="@+id/spoolerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/printingSpoolerButton" />

    <Button
        android:id="@+id/templatePrintButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/templatePrintButton" />

    <Button
        android:id="@+id/monitorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monitorButton" />

    <Button
        android:id="@+id/statusButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statusButton" />

    <Button
        android:id="@+id/firmwareUpdateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firmwareUpdateButton" />

</LinearLayout>
